# Airflow-Project-Daily-Weather-Data-ETL

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  TESTING.md  docker-compose-simple.yml  docker-compose.yml  pyproject.toml  quick_api_test.py  requirements.txt  setup.bat  setup.sh  test_pipeline.py
config/: config.py
dags/: advanced_weather_etl_dag.py  weather_etl_dag.py
data/: weather_data.csv
plugins/: weather_operators.py
scripts/: extract_weather.py  load_weather.py  transform_weather.py
sql/: create_tables.sql
tests/: conftest.py  test_extract.py  test_load.py  test_transform.py  unit_tests.py
